--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,12 @@ unbind C-b
 # set-option -g prefix C-a
 set-option -g prefix C-a
 
-set -g mouse on 
+unbind C-t
+# # set-option -g prefix C-a
+# set-option -g C-t C-n
+# set -o vi
+
+set -g mouse on
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -73,6 +78,23 @@ bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # end corentin
 
+# statusbar
+set -g status-position bottom
+set -g status-justify left
+set -g status-style 'bg=colour237 fg=colour137 dim'
+set -g status-left ''
+set -g status-right '#[fg=colour231,bg=colour236] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-style 'fg=colour22 bg=colour246 bold'
+setw -g window-status-current-format ' #I#[fg=colour234]:#[fg=colour234]#W#[fg=colour234]#F '
+
+setw -g window-status-style 'fg=colour49 bg=colour236'
+setw -g window-status-format ' #I#[fg=colour249]:#[fg=colour249]#W#[fg=colour249]#F '
+
+setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+
 # Pane resizing
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
@@ -84,8 +106,9 @@ set -g default-terminal "screen-256color"
 setw -g monitor-activity on
 set -g visual-activity on
 # set the status line's colors
-set -g status-fg white
-set -g status-bg black
+#set -g status-fg white
+#set -g status-bg color139
+#set -g status-style 'bg=colour18 fg=colour137 dim'
 # set the color of the window list
 # setw -g window-status-fg cyan
 # setw -g window-status-bg default
