--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -89,10 +89,10 @@ mime ^text,  label pager  = n -- "$@"
 mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
 mime ^text,  label pager  = "$PAGER" -- "$@"
 mime ^text,  label pager  = code -- "$@"
-mime ^text,  label pager  = n
-mime ^text,  label pager  = n
-mime ^text,  label editor  = n
-!mime ^text, label pager, ext xml|json|csv|tex|py|pl|rb|js|sh|php = n-- "$@"
+mime ^text,  label pager  = vim
+mime ^text,  label pager  = vim
+mime ^text,  label editor  = vim
+!mime ^text, label pager, ext xml|json|csv|tex|py|pl|rb|js|sh|php = vim-- "$@"
 !mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
 
