--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -82,7 +82,7 @@ bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 set -g status-position bottom
 set -g status-justify left
 set -g status-style 'bg=colour237 fg=colour137 dim'
-set -g status-left ''
+set -g status-left 'Session: #S'
 set -g status-right '#[fg=colour231,bg=colour236] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
