--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,6 +5,22 @@ cursor_blink_interval     0
 # cursor_shape     beam
 cursor_shape     block
 
+# Tab bar
+tab_bar_edge top
+
+tab_bar_style separator
+tab_bar_align center
+tab_bar_min_tabs 2
+tab_separator "▎"
+
+active_tab_foreground   #ffd700
+active_tab_background   #262626
+active_tab_font_style   bold-italic
+inactive_tab_foreground #ffffff
+inactive_tab_background #262626
+inactive_tab_font_style normal
+
+
 # background #1f2227
 background #262626
 font_size 10.0
@@ -35,3 +51,34 @@ window_margin_width 0
 window_padding_width 1
 
 linux_display_server x11
+
+kitty_mod Alt 
+
+
+map alt+1 goto_tab 1
+map alt+2 goto_tab 2
+map alt+3 goto_tab 3
+map alt+4 goto_tab 4
+map alt+5 goto_tab 5
+map alt+6 goto_tab 6
+map alt+7 goto_tab 7
+map alt+8 goto_tab 8
+map alt+9 goto_tab 9
+map alt+0 goto_tab 0
+
+map alt+t new_tab
+
+map alt+h neighboring_window left
+map alt+j neighboring_window down
+map alt+k neighboring_window up
+map alt+l neighboring_window right
+
+map shift+h move_window right
+map shift+j move_window down
+map shift+k move_window up
+map shift+l move_window left
+
+map ctrl+shift+c copy_to_clipboard
+map ctrl+shift+v paste_from_clipboard
+
+
