--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,13 +11,13 @@ tab_bar_edge top
 tab_bar_style separator
 tab_bar_align center
 tab_bar_min_tabs 2
-tab_separator "▎"
+tab_separator "█"
 
-active_tab_foreground   #ffd700
-active_tab_background   #262626
+active_tab_foreground   #ffffff
+active_tab_background   #8a92ef
 active_tab_font_style   bold-italic
-inactive_tab_foreground #ffffff
-inactive_tab_background #262626
+inactive_tab_foreground #000000
+inactive_tab_background #9e507d
 inactive_tab_font_style normal
 
 
