--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,15 +11,16 @@ tab_bar_edge top
 tab_bar_style separator
 tab_bar_align center
 tab_bar_min_tabs 2
-tab_separator "█"
+tab_separator " "
+#tab_separator "█"
 
 active_tab_foreground   #ffffff
-active_tab_background   #8a92ef
+active_tab_background   #7CA1D0
+#active_tab_background   #8a92ef
 active_tab_font_style   bold-italic
-inactive_tab_foreground #000000
-inactive_tab_background #9e507d
+inactive_tab_foreground #ffffff
+inactive_tab_background #323264
 inactive_tab_font_style normal
-
 
 # background #1f2227
 background #262626
@@ -81,4 +82,23 @@ map shift+l move_window left
 map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v paste_from_clipboard
 
+map alt+s next_layout
+map alt+tab next_tab
 
+map alt+w close_tab
+map alt+q close_window
+
+map alt+f5 load_config_file
+
+#map F5 launch --location=hsplit
+#map F6 launch --location=vsplit
+
+map shift+k move_window up
+map shift+h move_window left
+map shift+l move_window right
+map shift+j move_window down
+
+map ctrl+left resize_window narrower
+map ctrl+right resize_window wider
+map ctrl+up resize_window taller
+map ctrl+down resize_window shorter
