--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,7 +11,7 @@ tab_bar_edge top
 tab_bar_style separator
 tab_bar_align center
 tab_bar_min_tabs 2
-tab_separator " "
+tab_separator " ‖"
 #tab_separator "█"
 
 active_tab_foreground   #ffffff
