--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -74,10 +74,10 @@ map alt+j neighboring_window down
 map alt+k neighboring_window up
 map alt+l neighboring_window right
 
-map shift+h move_window right
-map shift+j move_window down
-map shift+k move_window up
-map shift+l move_window left
+map alt+shift+h move_window right
+map alt+shift+j move_window down
+map alt+shift+k move_window up
+map alt+shift+l move_window left
 
 map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v paste_from_clipboard
@@ -93,10 +93,10 @@ map alt+f5 load_config_file
 #map F5 launch --location=hsplit
 #map F6 launch --location=vsplit
 
-map shift+k move_window up
-map shift+h move_window left
-map shift+l move_window right
-map shift+j move_window down
+#map shift+k move_window up
+#map shift+h move_window left
+#map shift+l move_window right
+#map shift+j move_window down
 
 map ctrl+left resize_window narrower
 map ctrl+right resize_window wider
