--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -238,7 +238,7 @@ set cd_tab_case sensitive
 
 # Use fuzzy tab completion with the "cd" command. For example,
 # ":cd /u/lo/b<tab>" expands to ":cd /usr/local/bin".
-set cd_tab_fuzzy false
+set cd_tab_fuzzy true
 
 # Avoid previewing files larger than this size, in bytes.  Use a value of 0 to
 # disable this feature.
@@ -511,17 +511,17 @@ map gT        tab_move -1
 map gn        tab_new
 map gc        tab_close
 map uq        tab_restore
-map <a-1>     tab_open 1
-map <a-2>     tab_open 2
-map <a-3>     tab_open 3
-map <a-4>     tab_open 4
-map <a-5>     tab_open 5
-map <a-6>     tab_open 6
-map <a-7>     tab_open 7
-map <a-8>     tab_open 8
-map <a-9>     tab_open 9
-map <a-r>     tab_shift 1
-map <a-l>     tab_shift -1
+map \1     tab_open 1
+map \2     tab_open 2
+map \3     tab_open 3
+map \4     tab_open 4
+map \5     tab_open 5
+map \6     tab_open 6
+map \7     tab_open 7
+map \8     tab_open 8
+map \9     tab_open 9
+map \r     tab_shift 1
+map \l     tab_shift -1
 
 # Sorting
 map or set sort_reverse!
