--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -85,15 +85,19 @@ ext x?html?, has w3m,               terminal = w3m "$@"
 # Misc
 #-------------------------------------------
 # Define the "editor" for text files as first action
-mime ^text,  label pager  = n -- "$@"
+mime ^text,  label pager  = nvim -- "$@"
 mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
+mime ^text,  label pager  = vim -- "$@"
+mime ^text,  label pager  = nvim -- "$@"
 mime ^text,  label pager  = "$PAGER" -- "$@"
 mime ^text,  label pager  = code -- "$@"
 mime ^text,  label pager  = vim
 mime ^text,  label pager  = vim
 mime ^text,  label editor  = vim
-!mime ^text, label pager, ext xml|json|csv|tex|py|pl|rb|js|sh|php = vim-- "$@"
+!mime ^text, label pager, ext xml|json|csv|tex|py|pl|rb|js|sh|php = nvim-- "$@"
 !mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
+!mime ^text, label pager, ext xml|json|csv|tex|py|pl|rb|js|sh|php = vim-- "$@"
+!mime ^text, label pager, ext xml|json|csv|tex|py|pl|rb|js|sh|php = nvim-- "$@"
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
 
 ext 1                         = man "$1"
