--- a/polybar/config
+++ b/polybar/config
@@ -27,6 +27,19 @@ primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
+;background = #282a36
+;foreground = #f8f8f2
+red        = #ff5555
+bloodofmyenemies = #a60b00
+green      = #50fa7b
+yellow     = #f1fa8c
+blue       = #6272a4
+purple     = #bd93f9
+cyan       = #8be9fd
+orange     = #ff5555
+pink       = #ff79c6
+grey = #8fa6a1
+
 [bar/example]
 monitor = ${env:MONITOR:HDMI-1}
 width = 100%
@@ -57,7 +70,7 @@ font-2 = siji:pixelsize=10;1
 
 modules-left = bspwm i3
 modules-center = mpd
-modules-right = filesystem xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu
+modules-right = filesystem xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu network lock logout poweroff
 
 tray-position = right
 tray-padding = 2
@@ -98,7 +111,6 @@ ws-icon-default = " "
 type = internal/xwindow
 label = %title:0:30:...%
 
-
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
@@ -115,15 +127,15 @@ label-indicator-margin = 1
 label-indicator-background = ${colors.secondary}
 label-indicator-underline = ${colors.secondary}
 
-[module/filesystem]
-type = internal/fs
-interval = 25
+;[module/filesystem]
+;type = internal/fs
+;interval = 25
 
-mount-0 = /
+;mount-0 = /
 
-label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.foreground-alt}
+;label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
+;label-unmounted = %mountpoint% not mounted
+;label-unmounted-foreground = ${colors.foreground-alt}
 
 [module/bspwm]
 type = internal/bspwm
@@ -152,6 +164,18 @@ type = internal/i3
 format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
+; Display icons
+fuzzy-match = true
+
+; Icons
+ws-icon-0       = 1;
+ws-icon-1       = 2;
+ws-icon-2       = 3;
+ws-icon-3       = 4;
+ws-icon-4       = 5;
+ws-icon-5       = 6;
+ws-icon-default = 
+
 
 ; Only show workspaces on the same output as the bar
 ;pin-workspaces = true
@@ -228,7 +252,7 @@ interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #f90000
-label = %percentage:2%%
+label = cpu %percentage:2%%
 
 [module/memory]
 type = internal/memory
@@ -236,16 +260,16 @@ interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #4bffdc
-label = %percentage_used%%
+label = ram %percentage_used%%
 
-[module/wlan]
-type = internal/network
-interface = net1
-interval = 3.0
+;[module/wlan]
+;type = internal/network
+;interface = net1
+;interval = 3.0
 
-format-connected = <ramp-signal> <label-connected>
-format-connected-underline = #9f78e1
-label-connected = %essid%
+;format-connected = <ramp-signal> <label-connected>
+;format-connected-underline = #9f78e1
+;label-connected = %essid%
 
 format-disconnected =
 ;format-disconnected = <label-disconnected>
@@ -320,7 +344,7 @@ label = %date% %time%
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume = <label-volume> <bar-volume>
+;format-volume = <label-volume> <bar-volume>
 label-volume = VOL %percentage%%
 label-volume-foreground = ${root.foreground}
 
@@ -374,7 +398,7 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 
 [module/battery]
 type = internal/battery
-battery = BAT0
+battery = BAT1
 adapter = ADP1
 full-at = 98
 
@@ -404,6 +428,38 @@ animation-discharging-1 = 
 animation-discharging-2 = 
 animation-discharging-foreground = ${colors.foreground-alt}
 animation-discharging-framerate = 750
+
+label-charging = cha %percentage%%
+label-full = full %percentage%%
+label-discharging = bat %percentage%%
+
+;[module/battery]
+;type          = internal/battery
+;full-at       = 98
+;battery       = BAT0
+;adapter       = AC0
+;poll-interval = 5
+
+;format-charging = <label-charging>
+
+;label-charging            = "%percentage%%"
+;label-charging-background = ${xrdb:color7}
+;label-charging-foreground = ${xrdb:color0}
+;label-charging-padding    = 4
+
+;format-discharging = <label-discharging>
+
+;label-discharging            = "%percentage%%"
+;label-discharging-background = ${xrdb:color7}
+;label-discharging-foreground = ${xrdb:color0}
+;label-discharging-padding    = 4
+
+;format-full = <label-full>
+
+;label-full            = "%percentage%%"
+;label-full-background = ${xrdb:color7}
+;label-full-foreground = ${xrdb:color0}
+;label-full-padding    = 4
 
 [module/temperature]
 type = internal/temperature
@@ -453,13 +509,63 @@ menu-2-0-exec = sudo poweroff
 menu-2-1 = cancel
 menu-2-1-exec = menu-open-0
 
+
+;[module/network]
+;type = internal/network
+
+;; Interface
+;interface = wlp3s0
+
+;; Connected label
+;label-connected            = 
+;label-connected-foreground = ${colors.green}
+;label-connected-padding    = 2
+
+;; Disconnected label
+;label-disconnected            = 
+;label-disconnected-foreground = ${colors.red}
+;label-disconnected-padding    = 2
+
+;[module/lock]
+;type = custom/text
+
+;; Label
+;content            = 
+;content-foreground = ${colors.green}
+;content-padding    = 2
+
+;; Mouse click
+;click-left = i3lock-fancy -f Roboto-Regular -t ""
+
+;[module/logout]
+;type = custom/text
+
+;; Label
+;content            = 
+;content-foreground = ${colors.foreground}
+;content-padding    = 2
+
+;; Mouse click
+;click-left = i3-msg exit
+
+;[module/poweroff]
+;type = custom/text
+
+;; Label
+;content            = 
+;content-foreground = ${colors.red}
+;content-padding    = 2
+
+;; Mouse click
+;click-left = poweroff
+
 [settings]
 screenchange-reload = true
 ;compositing-background = xor
-;compositing-background = screen
+compositing-background = screen
 ;compositing-foreground = source
 ;compositing-border = over
-;pseudo-transparency = false
+pseudo-transparency = false
 
 [global/wm]
 margin-top = 5
