--- a/i3/config
+++ b/i3/config
@@ -260,3 +260,6 @@ hide_edge_borders vertical
 set $i3lockwall i3lock -i ~/Scaricati/aaaaa.png -t
 
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+#bindsym $mod+ctrl+s exec notify-send "i3-bind" "$(cat ~/.config/i3/conf | sed 's/bindsym //' | rofi -i -dmenu -p "Shortcuts")"
+#bindsym $mod+d exec --no-startup-id rofi -show drun -run-shell-command '{terminal} -e zsh -ic "{cmd} && read"'
+#bindsym $mod+d exec --no-startup-id rofi -show run
