--- a/polybar/config
+++ b/polybar/config
@@ -70,7 +70,7 @@ font-2 = siji:pixelsize=10;1
 
 modules-left = bspwm i3
 modules-center = mpd
-modules-right = filesystem xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu network lock logout poweroff
+modules-right = filesystem xbacklight alsa pulseaudio memory cpu wlan eth battery temperature date powermenu network lock logout poweroff
 
 tray-position = right
 tray-padding = 2
@@ -344,8 +344,10 @@ label = %date% %time%
 [module/pulseaudio]
 type = internal/pulseaudio
 
+format-underline = #0a6cf5
+
 ;format-volume = <label-volume> <bar-volume>
-label-volume = VOL %percentage%%
+label-volume = vol %percentage%%
 label-volume-foreground = ${root.foreground}
 
 label-muted = 🔇 muted
