--- a/i3/config
+++ b/i3/config
@@ -52,7 +52,7 @@ bindsym $mod+Shift+d exec dmenu_run                                             
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+#bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 bindsym $mod+Shift+p exec poweroff 
 bindsym $mod+Shift+o exec reboot
 bindsym $mod+Shift+i exec i3lock
@@ -263,3 +263,4 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 #bindsym $mod+ctrl+s exec notify-send "i3-bind" "$(cat ~/.config/i3/conf | sed 's/bindsym //' | rofi -i -dmenu -p "Shortcuts")"
 #bindsym $mod+d exec --no-startup-id rofi -show drun -run-shell-command '{terminal} -e zsh -ic "{cmd} && read"'
 #bindsym $mod+d exec --no-startup-id rofi -show run
+bindsym $mod+d --release exec sleep 0 && rofi -show drun ~/.config/rofi/t.rasi -theme t
