--- a/polybar/config
+++ b/polybar/config
@@ -71,8 +71,10 @@ font-2 = siji:pixelsize=10;1
 
 
 modules-left = bspwm i3
-modules-center = mpd
-modules-right = filesystem xbacklight alsa pulseaudio memory cpu wlan eth battery temperature date powermenu network lock logout poweroff
+modules-center =  
+;modules-center = mpd date 
+;modules-right = filesystem xbacklight alsa pulseaudio memory cpu wlan eth battery temperature date powermenu network lock logout poweroff
+modules-right = pulseaudio memory cpu battery date logout poweroff
 
 tray-position = right
 tray-padding = 2
@@ -451,17 +453,63 @@ animation-discharging-2 = 
 animation-discharging-foreground = ${colors.foreground-alt}
 animation-discharging-framerate = 750
 
-label-charging = cha %percentage%%
+label-charging = cha %percentage%% %time%
 label-full = full %percentage%%
-label-discharging = bat %percentage%%
-label-warn = ! %percentage%%
+label-warn = ! %percentage%% %time%
 label-warn-foreground = ${colors.secondary}
 ramp-foreground = ${colors.foreground-alt}
 
-;label-discharging            = "%percentage%%"
-;label-discharging-background = ${xrdb:color7}
-;label-discharging-foreground = ${xrdb:color0}
-;label-discharging-padding    = 4
+label-discharging = bat %percentage%% %time%
+label-discharging-background = ${xrdb:color7}
+label-discharging-foreground = ${xrdb:color0}
+label-discharging-padding    = 4
+
+;[module/battery]
+;type = internal/battery
+;full-at = 98
+
+;format-charging = <animation-charging> <label-charging>
+;format-discharging = <ramp-capacity> <label-discharging>
+;format-full = <ramp-capacity> <label-full>
+
+;label-charging = %percentage%% %time%h
+;label-discharging = %percentage%% %time%h 
+;ramp-capacity-0 = █
+;ramp-capacity-0-foreground = #f53c3c
+;ramp-capacity-1 = █
+;ramp-capacity-1-foreground = #ffa900
+;ramp-capacity-2 = █
+;ramp-capacity-3 = █
+;ramp-capacity-4 = █
+;;ramp-capacity-0 = 
+;;ramp-capacity-0-foreground = #f53c3c
+;;ramp-capacity-1 = 
+;;ramp-capacity-1-foreground = #ffa900
+;;ramp-capacity-2 = 
+;;ramp-capacity-3 = 
+;;ramp-capacity-4 = 
+
+;bar-capacity-width = 10
+;bar-capacity-format = %{+u}%{+o}%fill%%empty%%{-u}%{-o}
+;bar-capacity-fill = █
+;bar-capacity-fill-foreground = #ddffffff
+;bar-capacity-fill-font = 3
+;bar-capacity-empty = █
+;bar-capacity-empty-font = 3
+;bar-capacity-empty-foreground = #44ffffff
+
+;animation-charging-0 = █
+;animation-charging-1 = █
+;animation-charging-2 = █
+;animation-charging-3 = █
+;animation-charging-4 = █
+;;animation-charging-0 = 
+;;animation-charging-1 = 
+;;animation-charging-2 = 
+;;animation-charging-3 = 
+;;animation-charging-4 = 
+;animation-charging-framerate = 750
+
 
 ;[module/battery]
 ;type          = internal/battery
@@ -472,21 +520,21 @@ ramp-foreground = ${colors.foreground-alt}
 
 ;format-charging = <label-charging>
 
-;label-charging            = "%percentage%%"
+;label-charging            = "%percentage%%time%h"
 ;label-charging-background = ${xrdb:color7}
 ;label-charging-foreground = ${xrdb:color0}
 ;label-charging-padding    = 4
 
 ;format-discharging = <label-discharging>
 
-;label-discharging            = "%percentage%%"
+;label-discharging            = "%percentage%%time%h"
 ;label-discharging-background = ${xrdb:color7}
 ;label-discharging-foreground = ${xrdb:color0}
 ;label-discharging-padding    = 4
 
 ;format-full = <label-full>
 
-;label-full            = "%percentage%%"
+;label-full            = "%percentage%%time%h"
 ;label-full-background = ${xrdb:color7}
 ;label-full-foreground = ${xrdb:color0}
 ;label-full-padding    = 4
@@ -561,7 +609,7 @@ type = custom/text
 
 ; Label
 content            = ██
-content-foreground = ${colors.foreground}
+content-foreground = ${colors.}
 content-padding    = 0
 
 ; Mouse click
@@ -572,7 +620,7 @@ type = custom/text
 
 ; Label
 content            = ██
-content-foreground = ${colors.yellow}
+content-foreground = ${colors.foreground}
 content-padding    = 0
 
 ; Mouse click
