--- a/i3/config
+++ b/i3/config
@@ -55,7 +55,8 @@ bindsym $mod+Shift+d exec dmenu_run                                             
 #bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 #bindsym $mod+Shift+p exec poweroff 
 #bindsym $mod+Shift+o exec reboot
-#bindsym $mod+Shift+i exec i3lock
+bindsym $mod+Shift+i exec i3lock -i ~/Immagini/bb.png
+
 
 
 # change focus
@@ -258,7 +259,7 @@ for_window [class="chromium-browser"] floating enable
 
 hide_edge_borders vertical
 
-set $i3lockwall i3lock -i ~/Scaricati/aaaaa.png -t
+set $i3lockwall i3lock -i ~/Immagini/bb.png
 exec_always ~/.local/bin/scripts/battery
 
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
