--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -82,15 +82,19 @@ bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 set -g status-position bottom
 set -g status-justify left
 set -g status-style 'bg=colour237 fg=colour137 dim'
-set -g status-left '#[fg=colour75, bg=colour236]Session: #S'
-set -g status-right '#[fg=colour231,bg=colour236] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
+#set -g status-left '#[fg=colour75, bg=colour236]Session: #S'
+set -g status-left '#[fg=#ffb52a, bg=colour236]Session: #S'
+#set -g status-right '#[fg=colour231,bg=colour236] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
+set -g status-right '#[fg=colour231,bg=colour236] %d/%m #[fg=colour233,bg=#ffb52a] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
-setw -g window-status-current-style 'fg=colour234 bg=colour242 bold'
+#setw -g window-status-current-style 'fg=colour234 bg=colour242 bold'
+setw -g window-status-current-style 'fg=colour234 bg=#ffb52a bold'
 setw -g window-status-current-format ' #I#[fg=colour234]:#[fg=colour234]#W#[fg=colour234]#F '
 
-setw -g window-status-style 'fg=colour75 bg=colour236'
+#setw -g window-status-style 'fg=colour75 bg=colour236'
+setw -g window-status-style 'fg=#ffb52a bg=colour236'
 setw -g window-status-format ' #I#[fg=colour249]:#[fg=colour249]#W#[fg=colour249]#F '
 
 setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
