--- a/i3/config
+++ b/i3/config
@@ -211,7 +211,7 @@ bindsym $mod+r mode "resize"
 #class                  border  backgr. text    indicator
 client.focused          #252626 #252626 #ffb52a #43f32c
 client.focused_inactive #252626 #252626 #FE6F5E #252626
-client.unfocused        #252626 #252626 #dfdfdf #252626
+client.unfocused        #252626 #252626 #6c6c6c #252626
 client.urgent           #252626 #252626 #dfdfdf #252626
 
 
