--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -15,12 +15,12 @@ tab_bar_min_tabs 2
 tab_separator " | "
 #tab_separator " █ "
 
-active_tab_foreground   #000000
-active_tab_background   #ffb52a
+active_tab_foreground   #ffb52a
+active_tab_background   #6c6c6c
 #active_tab_background   #7CA1D0
 #active_tab_background   #8a92ef
 active_tab_font_style   bold-italic
-inactive_tab_foreground #ffffff
+inactive_tab_foreground #6c6c6c
 #inactive_tab_foreground #ffb52a
 #inactive_tab_background #323264
 inactive_tab_background #262626
