--- a/polybar/config
+++ b/polybar/config
@@ -263,7 +263,8 @@ type = internal/memory
 interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
+;format-underline = #4bffdc
+format-underline = #9f78e1
 label = ram %percentage_used%%
 
 ;[module/wlan]
