--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -85,12 +85,15 @@ set -g status-style 'bg=colour237 fg=colour137 dim'
 #set -g status-left '#[fg=colour75, bg=colour236]Session: #S'
 set -g status-left '#[fg=#ffb52a, bg=colour236]Session: #S'
 #set -g status-right '#[fg=colour231,bg=colour236] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
-set -g status-right '#[fg=colour231,bg=colour236] %d/%m #[fg=colour233,bg=#ffb52a] %H:%M:%S '
+#set -g status-right '#[fg=colour231,bg=colour236] %d/%m #[fg=colour233,bg=#ffb52a] %H:%M:%S '
+#set -g status-right '#[fg=colour231,bg=colour236] %d/%m #[fg=#000000,bg=#6c6c6c] %H:%M:%S '
+set -g status-right '#[fg=#ffb52a] %d/%m #[fg=#ffb52a,bg=#6c6c6c] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
 #setw -g window-status-current-style 'fg=colour234 bg=colour242 bold'
-setw -g window-status-current-style 'fg=colour234 bg=#ffb52a bold'
+setw -g window-status-current-style 'fg=#ffb52a bg=#6c6c6c bold'
+#setw -g window-status-current-style 'fg=colour234 bg=#ffb52a bold'
 setw -g window-status-current-format ' #I#[fg=colour234]:#[fg=colour234]#W#[fg=colour234]#F '
 
 #setw -g window-status-style 'fg=colour75 bg=colour236'
