--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -87,7 +87,7 @@ set -g status-left '#[fg=#ffb52a, bg=colour236]Session: #S'
 #set -g status-right '#[fg=colour231,bg=colour236] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
 #set -g status-right '#[fg=colour231,bg=colour236] %d/%m #[fg=colour233,bg=#ffb52a] %H:%M:%S '
 #set -g status-right '#[fg=colour231,bg=colour236] %d/%m #[fg=#000000,bg=#6c6c6c] %H:%M:%S '
-set -g status-right '#[fg=#ffb52a] %d/%m #[fg=#ffb52a,bg=#6c6c6c] %H:%M:%S '
+set -g status-right '#[fg=#ffb52a] %d/%m #[fg=#000000,bg=#6c6c6c] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
