--- a/proj_create/c/Makefile
+++ b/proj_create/c/Makefile
@@ -1,6 +1,6 @@
 target:
-	# gcc -Wall -g -o program client.c && ./program
-	gcc -Wall -g -o program client.c && valgrind --leak-check=full --show-leak-kinds=all --log-file=Valgrind.txt ./program
+	# gcc -Wall -g -o program client.c && valgrind --leak-check=full --show-leak-kinds=all --log-file=Valgrind.txt ./program
+	gcc -Wall -g -o program client.c && ./program
 
 clean:
 	rm -rf program
