--- a/polybar/config
+++ b/polybar/config
@@ -41,7 +41,8 @@ pink       = #ff79c6
 grey = #8fa6a1
 
 [bar/example]
-monitor = ${env:MONITOR:HDMI-1}
+monitor = ${env:MONITOR:XWAYLAND0}
+;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
 height = 27
 ;offset-x = 1%
