--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -15,17 +15,6 @@ tab_bar_min_tabs 2
 tab_separator " | "
 #tab_separator " █ "
 
-active_tab_foreground   #ffb52a
-active_tab_background   #6c6c6c
-#active_tab_background   #7CA1D0
-#active_tab_background   #8a92ef
-active_tab_font_style   bold-italic
-inactive_tab_foreground #6c6c6c
-#inactive_tab_foreground #ffb52a
-#inactive_tab_background #323264
-inactive_tab_background #262626
-inactive_tab_font_style normal
-
 # background #1f2227
 background #262626
 font_size 10.0
@@ -45,6 +34,17 @@ color6  #88c0d0
 color14 #88c0d0
 color7  #D8DEE9
 color15 #D8DEE9
+#ffb52a
+active_tab_foreground   #ffffff
+active_tab_background   #6c6c6c
+#active_tab_background   #7CA1D0
+#active_tab_background   #8a92ef
+active_tab_font_style   bold-italic
+inactive_tab_foreground #6c6c6c
+#inactive_tab_foreground #ffb52a
+#inactive_tab_background #323264
+inactive_tab_background #262626
+inactive_tab_font_style normal
 
 # The width (in pts) of window borders. Will be rounded to the nearest number of pixels based on screen resolution.
 window_border_width 1
