--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -34,9 +34,9 @@ color6  #88c0d0
 color14 #88c0d0
 color7  #D8DEE9
 color15 #D8DEE9
-#ffb52a
+#ffb52a  #6c6c6c
 active_tab_foreground   #ffffff
-active_tab_background   #6c6c6c
+active_tab_background   #ffb52a
 #active_tab_background   #7CA1D0
 #active_tab_background   #8a92ef
 active_tab_font_style   bold-italic
