--- a/sway/config
+++ b/sway/config
@@ -8,6 +8,9 @@ input * xkb_layout "it"
 #input * xkb_options "caps:escape" # Make Caps Lock an additional Esc
 #swaymsg -t get_inputs | jq -r '.[] | select(.identifier == "kbd_identifier") | .xkb_active_layout_name'
 
+#output DP-1 pos 1280 0
+#output HDMI-A-1 pos 0 0
+
 
 ### Variables
 #
@@ -111,10 +114,10 @@ bindsym $mod+k focus up
 bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
-#bindsym $mod+Left focus left
-#bindsym $mod+Down focus down
-#bindsym $mod+Up focus up
-#bindsym $mod+Right focus right
+bindsym $mod+Left focus left
+bindsym $mod+Down focus down
+bindsym $mod+Up focus up
+bindsym $mod+Right focus right
 
 # move focused window
 bindsym $mod+Shift+h move left
@@ -176,6 +179,18 @@ bindsym $mod+Shift+Right move right
     bindsym $mod+Shift+0 move container to workspace number 10
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
+
+#workspace 1 output DP-1
+#workspace 2 output HDMI-A-1
+#workspace 3 output HDMI-A-1
+#workspace 4 output HDMI-A-1
+#workspace 5 output HDMI-A-1
+#workspace 6 output DP-1
+#workspace 7 output HDMI-A-1
+#workspace 8 output HDMI-A-1
+#workspace 9 output HDMI-A-1
+#workspace 10 output HDMI-A-1
+
 #
 # Layout stuff:
 #
@@ -289,16 +304,29 @@ set $i3lockwall i3lock -i ~/Immagini/bb.png
 exec_always ~/.local/bin/scripts/battery
 
 #exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-exec_always --no-startup-id $HOME/.config/waybar/launch.sh
+#exec_always --no-startup-id $HOME/.config/waybar/launch.sh
+exec_always --no-startup-id exec waybar
 
 exec_always ~/.local/bin/scripts/dropbox
+exec_always wlr-randr --output eDP-1 --off && xrandr --output DP-1 --auto --left-of HDMI-A-1
 
 #bindsym $mod+d --release exec sleep 0 && rofi -show drun ~/.config/rofi/s.rasi -theme s &
 #bindsym $mod+Shift+d rofi -show drun ~/.config/rofi/t.rasi -theme s
 bindsym $mod+d exec ~/.local/bin/scripts/drunrofi.sh
 bindsym $mod+Shift+p exec ~/.local/bin/scripts/poffrofi
-bindsym $mod+Up exec amixer -q sset Master 3%+
-bindsym $mod+Down exec amixer -q sset Master 3%-
+#bindsym $mod+Up exec amixer -q sset Master 3%+
+#bindsym $mod+Down exec amixer -q sset Master 3%-
+
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
+bindsym XF86MonBrightnessUp exec brightnessctl set +5%
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
+bindsym XF86Search exec bemenu-run
 
 #assign [class="kitty"] 2
 #assign [class="Telegram"] 3
