--- a/sway/config
+++ b/sway/config
@@ -180,16 +180,16 @@ bindsym $mod+Shift+Right move right
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 
-#workspace 1 output DP-1
-#workspace 2 output HDMI-A-1
-#workspace 3 output HDMI-A-1
-#workspace 4 output HDMI-A-1
-#workspace 5 output HDMI-A-1
-#workspace 6 output DP-1
-#workspace 7 output HDMI-A-1
-#workspace 8 output HDMI-A-1
-#workspace 9 output HDMI-A-1
-#workspace 10 output HDMI-A-1
+##workspace 1 output DP-1
+##workspace 2 output HDMI-A-1
+##workspace 3 output HDMI-A-1
+##workspace 4 output HDMI-A-1
+##workspace 5 output HDMI-A-1
+##workspace 6 output DP-1
+##workspace 7 output HDMI-A-1
+##workspace 8 output HDMI-A-1
+##workspace 9 output HDMI-A-1
+##workspace 10 output HDMI-A-1
 
 #
 # Layout stuff:
@@ -308,7 +308,7 @@ exec_always ~/.local/bin/scripts/battery
 exec_always --no-startup-id exec waybar
 
 exec_always ~/.local/bin/scripts/dropbox
-exec_always wlr-randr --output eDP-1 --off && xrandr --output DP-1 --auto --left-of HDMI-A-1
+#exec_always wlr-randr --output eDP-1 --off && xrandr --output DP-1 --auto --left-of HDMI-A-1
 
 #bindsym $mod+d --release exec sleep 0 && rofi -show drun ~/.config/rofi/s.rasi -theme s &
 #bindsym $mod+Shift+d rofi -show drun ~/.config/rofi/t.rasi -theme s
