foreground doen't work

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -35,11 +35,12 @@ color14 #88c0d0
 color7  #D8DEE9
 color15 #D8DEE9
 #ffb52a  #6c6c6c
-active_tab_background   #ffb52a
-active_tab_foreground   #ffb52a
+active_tab_background #ffb52a
+#active_tab_foreground   #ffb52a
+active_tab_foreground #ffb52a
 #active_tab_background   #7CA1D0
 #active_tab_background   #8a92ef
-active_tab_font_style   bold-italic
+active_tab_font_style bold-italic
 inactive_tab_foreground #6c6c6c
 #inactive_tab_foreground #ffb52a
 #inactive_tab_background #323264
