--- a/Codium/User/settings.json
+++ b/Codium/User/settings.json
@@ -6,6 +6,11 @@
     "vscode-neovim.neovimInitVimPaths.linux": "$HOME/.config/nvim-vscodium/init.vim",
     "editor.scrollbar.horizontal": "hidden",
     "editor.scrollbar.vertical": "hidden",
+    "editor.hideCursorInOverviewRuler": true,
+    "editor.overviewRulerBorder": false,
+    "editor.selectionHighlight": false,
+    "editor.occurrencesHighlight": false,
+    "editor.matchBrackets": false,
     "workbench.startupEditor": "newUntitledFile",
     "vim.vimrc.path": "$HOME/.config/nvim/init.vim",
     "vim.vimrc.enable": true,
@@ -1108,6 +1113,7 @@
     "editor.minimap.enabled": false,
     "debug.onTaskErrors": "debugAnyway",
     "workbench.activityBar.visible": false,
-    "editor.tabSize": 2
+    "editor.tabSize": 2,
+    "editor.cursorBlinking": "solid"
 
 }
