--- a/waybar/config
+++ b/waybar/config
@@ -126,7 +126,7 @@
         // "interface": "wlp2*", // (Optional) To force the use of this interface
         "format-wifi": " ",
         /*"format-wifi": "{essid} ({signalStrength}%)  ",*/
-        "format-ethernet": "{ipaddr}/{cidr}  ",
+        "format-ethernet": "☎ ",
         "tooltip-format": "{ifname} via {gwaddr}  ",
         "format-linked": "{ifname} (No IP)  ",
         "format-disconnected": "   ",
