--- a/Codium/User/settings.json
+++ b/Codium/User/settings.json
@@ -1123,6 +1123,7 @@
     "editor.cursorBlinking": "solid",
     "git.autofetch": true,
     "workbench.activityBar.visible": false,
-    "explorer.confirmDragAndDrop": false
+    "explorer.confirmDragAndDrop": false,
+    "workbench.colorTheme": "Default Light+"
 
 }
