--- a/waybar/config
+++ b/waybar/config
@@ -163,12 +163,13 @@
     /*},*/
         "custom/launcher":{
         "format": "    ",
-        "on-click": "wofi --show drun",
+        "on-click": "wofi --show drun -b",
         "on-click-right": "killall wofi"
     },
       "custom/power": {
     "format": "   ",
-    "on-click": "swaynag -t warning -m 'Power Menu Options' -b 'Logout' 'swaymsg exit' -b 'Restart' 'shutdown -r now' -b 'Shutdown'  'shutdown -h now' --background=#005566 --button-background=#009999 --button-border=#002b33 --border-bottom=#002b33"
+        "on-click": "bash ~/.local/bin/scripts/poffrofi"
+    /*"on-click": "swaynag -t warning -m 'Power Menu Options' -b 'Logout' 'swaymsg exit' -b 'Restart' 'shutdown -r now' -b 'Shutdown'  'shutdown -h now' --background=#005566 --button-background=#009999 --button-border=#002b33 --border-bottom=#002b33"*/
   },
     "custom/media": {
         "format": "{icon} {}",
