--- a/waybar/config
+++ b/waybar/config
@@ -139,9 +139,12 @@
         "format": "{volume}% {icon} {format_source}",
         "format-bluetooth": "{volume}% {icon} {format_source}",
         "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": " {format_source}",
-        "format-source": "{volume}%  ",
-        "format-source-muted": " ",
+        "format-muted": " ",
+        /*"format-muted": " {format_source}",*/
+        /*"format-source": "{volume}%  ",*/
+        /*"format-source-muted": " ",*/
+        "format-source": "{volume}%   ",
+        "format-source-muted": " ",
         "format-icons": {
             "headphone": " ",
             "hands-free": " ",
@@ -151,7 +154,8 @@
             "car": " ",
             "default": [" ", " ", " "]
         },
-        "on-click": "pavucontrol"
+        "on-click": "bash ~/.local/bin/scripts/audioset.sh"
+        /*"on-click": "pavucontrol"*/
     },
     /*"apps": {*/
         /*"format": " ", //   */
