--- a/sway/config
+++ b/sway/config
@@ -284,6 +284,16 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
+# Gestures
+#gesture swipe left 4 swaymsg workspace next
+#gesture swipe right 4 swaymsg workspace prev
+#gesture swipe left 3 ydotool key Alt+Right
+#gesture swipe right 3 ydotool key Alt+Left
+#gesture swipe down 3 ydotool key F5
+#gesture swipe up 3 ~/Documents/Scripts/appgrid.sh
+#gesture swipe up 4 ~/Documents/Scripts/new-ws.py
+#gesture swipe down 4 swaymsg kill
+
 
 #font pango:DejaVu Sans Mono 6
 #for_window [class=".*"] title_format "<span font='Tewi 8'> </span>"
